# SparkTorchPublic

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
sparkenv/: Dockerfile  pyproject.toml
sparkenv/src/distributed_training/: combined_workflow.py  components.py  test_combined_workflow.py
sparkenv/src/testing/: 123_reg_logistique.py  standardizing_lag_base.py
sparkenv/src/xgboost_baseline/: components.py  infer.py  train.py
sparkenv/src/xgboost_baseline/models/xgboost_energy_predictor/metadata/: .part-00000-fcd2223c-cac3-4246-bcc5-ee2c415a2d40-c000.txt.crc  part-00000-fcd2223c-cac3-4246-bcc5-ee2c415a2d40-c000.txt
sparkenv/src/xgboost_baseline/models/xgboost_energy_predictor/stages/0_ScaledLagModel_145a45aa235b/metadata/: .part-00000-d7ff0e27-7e48-4ac9-aca4-f78bff38841c-c000.txt.crc  part-00000-d7ff0e27-7e48-4ac9-aca4-f78bff38841c-c000.txt
sparkenv/src/xgboost_baseline/models/xgboost_energy_predictor/stages/1_SimpleScalerModel_bc07bb50b1f4/metadata/: .part-00000-8ad13a13-503b-43d5-9376-c97de0779c33-c000.txt.crc  part-00000-8ad13a13-503b-43d5-9376-c97de0779c33-c000.txt
sparkenv/src/xgboost_baseline/models/xgboost_energy_predictor/stages/2_CollapseMaskTransform_8be2660681bb/metadata/: .part-00000-d20846c5-2985-48ed-9e4b-77cfa9729791-c000.txt.crc  part-00000-d20846c5-2985-48ed-9e4b-77cfa9729791-c000.txt
sparkenv/src/xgboost_baseline/models/xgboost_energy_predictor_cv/metadata/: .part-00000-95dedc87-b6aa-4a30-926c-f5a0ba33c6bd-c000.txt.crc  part-00000-95dedc87-b6aa-4a30-926c-f5a0ba33c6bd-c000.txt
(+18 files in other folders)
